--- a/index.html
+++ b/index.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Concept of coding pattern</title>
+    <title>Concept of coding </title>
 </head>
 <body>
-    <h1>Hello World this is my first web page.</h1>
+    <h1>Concept of Coding</h1>
+</body>
+<body>
+    <p>Coding of DS & Algo makes very easy with the help of coding pattern.</p>
+    <p>Below are selected problems seggregated based on the pattern. This will help you to understand the pattern and know type of problems where this pattern needs to be applied. </p>
 </body>
 </html>
