--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>Concept of Coding</h1>
 </body>
 <body>
-    <p>Coding of DS & Algo makes very easy with the help of coding pattern.</p>
+    <h2>Coding of DS & Algo makes very easy with the help of coding pattern.</h2>
     <p>Below are selected problems seggregated based on the pattern. This will help you to understand the pattern and know type of problems where this pattern needs to be applied. </p>
 </body>
 </html>
