--- a/index.html
+++ b/index.html
@@ -13,4 +13,32 @@
     <h2>Coding of DS & Algo makes very easy with the help of coding pattern.</h2>
     <p>Below are selected problems seggregated based on the pattern. This will help you to understand the pattern and know type of problems where this pattern needs to be applied. </p>
 </body>
+
+<table border="1">
+ <tr> 
+    <th></th>
+    <th>Column Header 1</th>
+    <th>Column Header 2</th>
+    <th>Column Header 3</th>
+  </tr>
+  <tr>
+    <th>Row Header 1</th>
+    <td>Data</td>
+    <td>Data</td>
+    <td>Data</td>
+  </tr>
+  <tr> 
+    <th>Row Header 2</th>
+    <td>Data</td>
+    <td>Data</td>
+    <td>Data</td>
+ </tr>
+ <tr> 
+    <th>Row Header 3</th>
+    <td>Data</td>
+    <td>Data</td>
+    <td>Data</td>
+ </tr>
+</table>
+
 </html>
